<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_weather_forecast_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/rl_heading_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/lbl_timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_timezone"
            />

        <TextView
            android:id="@+id/tv_timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lbl_timezone"
            />

        <TextView
            android:id="@+id/lbl_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/lbl_latitude"
           />

        <TextView
            android:id="@+id/lbl_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/lbl_latitude"
            android:text="@string/lbl_longitude"
             />
    </RelativeLayout>
</RelativeLayout>
