<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    >
    <RelativeLayout
        android:id="@+id/ll_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <TextView
            android:id="@+id/lbl_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_time"

            />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/lbl_precipProbability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_time"
            android:text="@string/lbl_precipProbability"
            />
        <TextView
            android:id="@+id/tv_precipProb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_time"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/lbl_precipIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_precipIntensity"
            android:layout_below="@+id/lbl_precipProbability"

            />
        <TextView
            android:id="@+id/tv_prepIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_precipProbability"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:text=""
            android:background="@color/colorPrimaryDark"/>
    </RelativeLayout>
</RelativeLayout>